# test-deepseek-understand-anythin-port-python

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  r
docs/logs/: conversation_with_ai_about_phase_8_1.md  conversation_with_ai_log.txt  review_8_1.md
docs/plan/: chatgpt_explain_phase_8_1.md  codegraph_baseline_audit.md  codex_update_plan_about_codegraph.md  current_status_while_explore_phase_8_1.md  fix_phase_2_plan.md  phase_8_1.md  python-core-port-plan.md  rewrite_phase_1.md  rewrite_phase_2.md  rewrite_phase_3-1.md  rewrite_phase_3-2-python.md  rewrite_phase_3-3-cpp.md  rewrite_phase_3-4-java.md  rewrite_phase_4.md  rewrite_phase_5.md  rewrite_phase_6.md  rewrite_phase_7.md  rewrite_phase_7_fix_1.md  update_plan_about_codegraph.md
src/understand_anything/: __init__.py  pipeline.py  schema.py  types.py
src/understand_anything/analysis/: __init__.py  change_classifier.py  fingerprint.py  graph_builder.py  graph_queries.py  graph_traversal.py  language_lesson.py  layer_detector.py  llm_analyzer.py  normalize.py  staleness.py  tour_generator.py
src/understand_anything/analysis/resolution/: __init__.py  builtins.py  framework_resolver.py  import_resolver.py  name_matcher.py  types.py
src/understand_anything/cli/: __init__.py  analyze.py  cli.py  graph.py  resolve.py  sync.py  watch.py
src/understand_anything/frameworks/: __init__.py  django.py  express.py  fastapi.py  flask.py  gin.py  nextjs.py  rails.py  react.py  spring.py  vue.py
src/understand_anything/ignore/: __init__.py  filter.py  generator.py
src/understand_anything/languages/: __init__.py  framework_registry.py  registry.py  types.py
src/understand_anything/languages/configs/: __init__.py  batch.py  c.py  cpp.py  csharp.py  css.py  csv.py  docker_compose.py  dockerfile.py  env.py  github_actions.py  go.py  graphql.py  html.py  java.py  javascript.py  jenkinsfile.py  json_config.py  json_schema.py  kotlin.py  kubernetes.py  lua.py  makefile.py  markdown.py  openapi.py  php.py  plaintext.py  powershell.py  protobuf.py  python.py  restructuredtext.py  ruby.py  rust.py  shell.py  sql.py  swift.py  terraform.py  toml.py  typescript.py  xml.py  (+1 more)
src/understand_anything/persistence/: __init__.py  migrations.py  queries.py  sqlite_backend.py
src/understand_anything/plugins/: __init__.py  discovery.py  registry.py  tree_sitter.py
src/understand_anything/plugins/extractors/: __init__.py  base.py  cpp.py  java.py  python.py  types.py  typescript.py
src/understand_anything/plugins/parsers/: __init__.py  dockerfile.py  env.py  graphql.py  json_config.py  makefile.py  markdown.py  protobuf.py  shell.py  sql.py  terraform.py  toml_config.py  yaml_config.py
src/understand_anything/search/: __init__.py  fuzzy.py  semantic.py
src/understand_anything/sync/: __init__.py  index.py  watcher.py
tests/: conftest.py  test_change_classifier.py  test_cli.py  test_fingerprint.py  test_framework_registry.py  test_fuzzy_search.py  test_graph_builder.py  test_ignore.py  test_ignore_generator.py  test_language_lesson.py  test_language_registry.py  test_language_types.py  test_layer_detector.py  test_llm_analyzer.py  test_normalize.py  test_persistence.py  test_plugin_discovery.py  test_semantic_search.py  test_staleness.py  test_tour_generator.py
tests/test_extractors/: test_cpp.py  test_java.py  test_python.py  test_typescript.py
tests/test_integration/: conftest.py  test_complete_pipeline.py
tests/test_parsers/: test_dockerfile.py  test_env.py  test_graphql.py  test_json.py  test_makefile.py  test_markdown.py  test_protobuf.py  test_shell.py  test_sql.py  test_terraform.py  test_toml.py  test_yaml.py
tests/test_plugins/: test_registry.py  test_tree_sitter.py
